--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://dgherghef.github.io/resume2",
   "name": "resume2",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +11,7 @@
     "boostrap": "^2.0.0",
     "bootstrap-icons": "^1.10.3",
     "emailjs-com": "^3.2.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
@@ -18,6 +20,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
